Tue Jun 23 19:49:22 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added a top-level file gsl_config.h for detecting features when
 	users include the library headers. Currently it just turns on
 	HAVE_INLINE if you are using GCC or C++.

1998-05-16  Mark Galassi  <rosalia@cygnus.com>

	* configure.in: Brian fixed the error where libgslerr.a was not
	being installed in the 0.3e release, so I just bumped it up to
	0.3f to make a new release.

1998-05-14  Mark Galassi  <rosalia@cygnus.com>

	* configure.in: upped the version to 0.3e, and this time I might
	actually make the public snapshot!

Wed Apr  8 18:30:48 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* Now using the automake variable check_PROGRAMS everywhere for
 	the testing programs (no need to build them unless we do make
 	check)

Mon Apr  6 15:09:08 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added matrix and vector subdirectories

Wed Mar 18 10:27:27 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_complex.h: the typedef for 'complex' has been renamed to
 	gsl_complex, to avoid conflicts with C++ bindings and libstdc++

1998-02-09  Mark Galassi  <rosalia@cygnus.com>

	* configure.in: 0.3b is now released, so I upped the version
	number to 0.3c-interim.

1998-02-09  Mark Galassi  <rosalia@cygnus.com>

	* configure.in: upped version number to 0.3b

1998-01-30  Mark Galassi  <rosalia@cygnus.com>

	* AUTHORS: added Gerry Jungman to the authors list.
