@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = err ieee-utils rng random vector matrix randist fft roots specfunc statistics siman integration histogram monte doc
+SUBDIRS = err ieee-utils rng vector matrix randist fft roots specfunc statistics siman integration histogram monte doc
 
 include_HEADERS = gsl_config.h gsl_complex.h gsl_math.h
 
